--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -229,6 +229,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reference point (Ngatamariki power station)\n",
+    "latref = -38.546143\n",
+    "lonref = 176.195504"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,16 +253,20 @@
    "outputs": [],
    "source": [
     "start = '2012-05-15T00:00:00'\n",
-    "thisrpt = '2017-01-01T00:00:00'\n",
-    "end = '2018-01-01T00:00:00'\n",
+    "thisrpt = '2018-01-01T00:00:00'\n",
+    "end = '2019-01-01T00:00:00'\n",
+    "\n",
+    "geonetstart = '2005-01-01T00:00:00'\n",
+    "commission = '2013-09-15T00:00:00'\n",
+    "wellstart = '2012-05-15T00:00:00'\n",
     "\n",
     "#previous report period\n",
-    "lastrpt = '2016-01-01T00:00:00'\n",
-    "lastend = '2017-01-01T00:00:00'\n",
+    "lastrpt = '2017-01-01T00:00:00'\n",
+    "lastend = '2018-01-01T00:00:00'\n",
     "\n",
     "#report period before that\n",
-    "last2rpt = '2015-01-01T00:00:00'\n",
-    "last2end = '2016-01-01T00:00:00'"
+    "last2rpt = '2016-01-01T00:00:00'\n",
+    "last2end = '2017-01-01T00:00:00'"
    ]
   },
   {
@@ -522,7 +537,7 @@
     "#rotokawa\n",
     "plt.plot(seisrt['lon'], seisrt['lat'], color='gray', markeredgecolor='black', markeredgewidth=0.2, linestyle='None', marker='^', markersize=4, transform=ccrs.Geodetic())\n",
     "#geonet\n",
-    "plt.plot(seisgn['lon'], seisgn['lat'], color='black', markeredgewidth=0, linestyle='None', marker='^', markersize=4, transform=ccrs.Geodetic())\n",
+    "plt.plot(seisgn['lon'], seisgn['lat'], color='gray', markeredgewidth=0, linestyle='None', marker='^', markersize=4, transform=ccrs.Geodetic())\n",
     "#plot text labels\n",
     "for index, row in seisng.iterrows():\n",
     "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', color='white', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
@@ -959,6 +974,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Magnitude-time and cumulative number - Complete period since 2012-05 & location within 5 km of reference point**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hypdd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate distance from reference point\n",
+    "hypdd['dist'] = haversine_np(hypdd['longitude'],hypdd['latitude'],lonref,latref)\n",
+    "len(hypdd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#distance within 5 km\n",
+    "hypall = hypdd[hypdd['dist']<=5]\n",
+    "len(hypall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(nrows=2,ncols=1, sharex=True, figsize=(22,10))\n",
+    "\n",
+    "#distance vs time\n",
+    "hypall.plot(y='ml', color='black', marker='o', linewidth=0.3, linestyle='None', legend=False, ax=ax1)\n",
+    "\n",
+    "#plot labels\n",
+    "ax1.text('2012-06-01', 3.7, 'A', size=16)\n",
+    "\n",
+    "ax1.xaxis.grid()\n",
+    "ax1.yaxis.grid()\n",
+    "ax1.set_ylim([0,4.2])\n",
+    "ax1.set_xlim(start, end)\n",
+    "ax1.set_ylabel('Magnitude')\n",
+    "ax1.tick_params(labelright = True)\n",
+    "\n",
+    "#cumulative number vs time\n",
+    "#make a column containing event number (should be a better way of doing this)\n",
+    "hypall.reset_index(inplace=True)\n",
+    "hypall['evnum'] = hypall.index+1\n",
+    "nmax = hypall['evnum'].iloc[-1]\n",
+    "hypall.set_index('ot', inplace=True, drop=True)\n",
+    "\n",
+    "#all eqs\n",
+    "hypall.plot(y='evnum', color='black',ax=ax2, legend=False)\n",
+    "ax2.set_ylim([0,nmax])\n",
+    "\n",
+    "#plot labels\n",
+    "ax2.text('2012-06-01', 1350, 'B', size=16)\n",
+    "\n",
+    "ax2.xaxis.grid()\n",
+    "ax2.yaxis.grid()\n",
+    "ax2.set_ylabel('Cumulative number')\n",
+    "\n",
+    "#cumulative energy\n",
+    "hypall['energy'] = pow(10,(1.44 * hypall['ml'] + 5.24))\n",
+    "hypall['cumeng'] = hypall['energy'].cumsum()\n",
+    "hypall['cumeng'] = 100 * hypall['cumeng'] / hypall['cumeng'].max()\n",
+    "ax3= ax2.twinx()\n",
+    "ax3.plot(hypall['cumeng'], color='blue', marker='None')\n",
+    "ax3.tick_params(axis='y', colors='blue')\n",
+    "ax3.set_ylabel('percent cumulative energy', color = 'blue')\n",
+    "ax3.set_ylim(0,100)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('mercury_long-term_time-series.png', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Total events per year, divided into north and south**"
    ]
   },
@@ -1119,7 +1225,7 @@
     "bbox = '176.0,-38.8,176.5,-38.3'\n",
     "maxdep = '20'\n",
     "\n",
-    "url = 'https://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&maxdepth='+maxdep+'&startdate='+start+'&enddate='+end"
+    "url = 'https://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&maxdepth='+maxdep+'&startdate='+geonetstart+'&enddate='+end"
    ]
   },
   {
@@ -1138,17 +1244,6 @@
    "outputs": [],
    "source": [
     "eqs.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#reference point (Ngatamariki power station)\n",
-    "latref = -38.546143\n",
-    "lonref = 176.195504"
    ]
   },
   {
@@ -1334,10 +1429,10 @@
     "fig, (ax1, ax2) = plt.subplots(nrows=2,ncols=1, sharex=True, figsize=(22,10))\n",
     "\n",
     "#distance vs time\n",
-    "eqs10.plot(y='dist', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax1)\n",
+    "eqs5.plot(y='dist', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax1)\n",
     "\n",
     "#plot label A\n",
-    "ax1.text('2012-06-01', 9, 'A', size=16)\n",
+    "ax1.text('2005-02-01', 4.5, 'A', size=16)\n",
     "\n",
     "#yearly ticks and grid\n",
     "majorTick = mpl.dates.YearLocator(1)\n",
@@ -1351,14 +1446,19 @@
     "\n",
     "ax1.tick_params(labelright = True)\n",
     "\n",
-    "#dashed line at dist=5 km\n",
-    "ax1.axhline(y=5, color='blue', linestyle='--')\n",
+    "#indicate ngatamariki power station commission\n",
+    "ax1.axvline(x=commission, color='blue', linestyle='--')\n",
+    "ax1.text('2013-08-01T00:00:00', 0.5, 'power station commission', color='blue', rotation='vertical', verticalalignment='bottom')\n",
+    "#indicate start reinjection well drilling and testing\n",
+    "ax1.axvline(x=wellstart, color='blue', linestyle='--')\n",
+    "ax1.text('2012-04-01T00:00:00', 0.5, 'reinjection well drill/test', color='blue', rotation='vertical', verticalalignment='bottom')\n",
+    "\n",
     "\n",
     "#magnitude vs time\n",
     "eqs5.plot(y=' magnitude', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax2)\n",
     "\n",
     "#plot label 8\n",
-    "ax2.text('2012-06-01', 3.7, 'B', size=16)\n",
+    "ax2.text('2005-02-01', 3.7, 'B', size=16)\n",
     "\n",
     "#yearly ticks and grid\n",
     "ax2.xaxis.set_major_locator(majorTick)\n",
@@ -1367,12 +1467,13 @@
     "ax2.yaxis.grid()\n",
     "\n",
     "ax2.set_ylim([0,4.2])\n",
-    "ax2.set_xlim(start, end)\n",
+    "ax2.set_xlim(geonetstart, end)\n",
     "ax2.set_ylabel('Magnitude')\n",
     "ax2.tick_params(labelright = True)\n",
     "\n",
     "#dashed line at magnitude=2, about felt threshold\n",
     "ax2.axhline(y=2, color='blue', linestyle='--')\n",
+    "ax2.text('2007-01-01T', 2.1, 'common threshold for felt events', color='blue')\n",
     "\n",
     "#indicate this report\n",
     "ax2.axvline(x=thisrpt, color='blue', linestyle='--')\n",
