minor revisions to 2018 version

--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -1096,7 +1096,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annual.head()"
+    "annual"
    ]
   },
   {
@@ -1221,7 +1221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#box for search area, this is plenty big enough to les get events within 10 km of reference point\n",
+    "#box for search area, this is plenty big enough to at least get events within 10 km of reference point\n",
     "bbox = '176.0,-38.8,176.5,-38.3'\n",
     "maxdep = '20'\n",
     "\n",
