--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -1026,7 +1026,7 @@
     "ax1.yaxis.grid()\n",
     "ax1.set_ylim([0,4.2])\n",
     "ax1.set_xlim(start, end)\n",
-    "ax1.set_ylabel('Magnitude')\n",
+    "ax1.set_ylabel('Magnitude', fontsize=16)\n",
     "ax1.tick_params(labelright = True)\n",
     "\n",
     "#cumulative number vs time\n",
@@ -1041,11 +1041,11 @@
     "ax2.set_ylim([0,nmax])\n",
     "\n",
     "#plot labels\n",
-    "ax2.text('2012-06-01', 1350, 'B', size=16)\n",
+    "ax2.text('2012-06-01', 1500, 'B', size=16)\n",
     "\n",
     "ax2.xaxis.grid()\n",
     "ax2.yaxis.grid()\n",
-    "ax2.set_ylabel('Cumulative number')\n",
+    "ax2.set_ylabel('Cumulative number', fontsize=16)\n",
     "\n",
     "#cumulative energy\n",
     "hypall['energy'] = pow(10,(1.44 * hypall['ml'] + 5.24))\n",
@@ -1054,7 +1054,7 @@
     "ax3= ax2.twinx()\n",
     "ax3.plot(hypall['cumeng'], color='blue', marker='None')\n",
     "ax3.tick_params(axis='y', colors='blue')\n",
-    "ax3.set_ylabel('percent cumulative energy', color = 'blue')\n",
+    "ax3.set_ylabel('Percent cumulative energy', color = 'blue', fontsize=16)\n",
     "ax3.set_ylim(0,100)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -1442,7 +1442,7 @@
     "ax1.xaxis.grid()\n",
     "ax1.yaxis.grid()\n",
     "\n",
-    "ax1.set_ylabel('Distance (km)')\n",
+    "ax1.set_ylabel('Distance (km)', fontsize=16)\n",
     "\n",
     "ax1.tick_params(labelright = True)\n",
     "\n",
@@ -1468,7 +1468,7 @@
     "\n",
     "ax2.set_ylim([0,4.2])\n",
     "ax2.set_xlim(geonetstart, end)\n",
-    "ax2.set_ylabel('Magnitude')\n",
+    "ax2.set_ylabel('Magnitude', fontsize=16)\n",
     "ax2.tick_params(labelright = True)\n",
     "\n",
     "#dashed line at magnitude=2, about felt threshold\n",
