bug fix for arc and nrt servers

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
-    "from obspy.core import UTCDateTime\n",
+    "from obspy.core import UTCDateTime, Stream\n",
     "from obspy.clients.fdsn import Client\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -154,29 +154,32 @@
     "  pdate = date.strftime(\"%Y%m%d\")\n",
     "  \n",
     "def retrieve(r):\n",
-    "  global tr\n",
-    "  if (current):   #current data, last day, nrt client only\n",
-    "    time = UTCDateTime()\n",
-    "    client = Client(nrt_client)\n",
-    "    st = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time - 86400, time, attach_response=True)\n",
-    "  else:   #older data\n",
+    "    global tr\n",
     "    time = UTCDateTime(pdate)\n",
     "    try:\n",
     "        client = Client(arc_client)\n",
-    "        st = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time, time + 86400, attach_response=True)\n",
-    "        print ('arc client successful')\n",
-    "        #if this raises an exception, try the near real-time server\n",
+    "        starc = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time, time + 86400, attach_response=True)\n",
+    "        print('arc client successful')\n",
     "    except:\n",
+    "        print('arc client not successful')\n",
+    "        starc = Stream()\n",
+    "    try:\n",
     "        client = Client(nrt_client)\n",
-    "        st = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time, time + 86400, attach_response=True)\n",
+    "        stnrt = client.get_waveforms(str(net), str(stn), str(loc), str(cmp), time, time + 86400, attach_response=True)\n",
     "        print ('nrt client successful')\n",
-    "  st.remove_sensitivity()\n",
-    "  st.merge(fill_value = 0.0) #merge streams, fill gaps with zeros\n",
-    "  tr = st[0]\n",
-    "  tr.data *= 1e9 #convert from m/s to nm/s\n",
-    "  tr.data = np.clip(tr.data, clip*-1, clip)\n",
-    "  print ('data retrieved')\n",
-    "  print (tr)\n",
+    "    except:\n",
+    "        print('nrt client not successful')\n",
+    "        stnrt = Stream()\n",
+    "  \n",
+    "    st = starc + stnrt\n",
+    "    st.merge(fill_value = 0.0) #merge streams, fill gaps with zeros\n",
+    "    st.remove_sensitivity()\n",
+    "    \n",
+    "    tr = st[0]\n",
+    "    tr.data *= 1e9 #convert from m/s to nm/s\n",
+    "    tr.data = np.clip(tr.data, clip*-1, clip)\n",
+    "    print ('data retrieved')\n",
+    "    print (tr)\n",
     "\n",
     "def bandpass(bp):\n",
     "  global lp, hp\n",
@@ -322,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   },
   "widgets": {
    "state": {
