--- a/taranaki_report/taranaki_trc_report.ipynb
+++ b/taranaki_report/taranaki_trc_report.ipynb
@@ -51,7 +51,7 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.io.img_tiles as cimgt\n",
     "from cartopy.io.img_tiles import OSM\n",
-    "#from cartopy.io.img_tiles import StamenTerrain\n",
+    "from cartopy.io.img_tiles import Stamen\n",
     "\n",
     "import warnings; warnings.simplefilter('ignore')\n",
     "\n",
@@ -102,8 +102,8 @@
    "outputs": [],
    "source": [
     "startall = '1994-01-01'\n",
-    "startyear = '2017-07-01'\n",
-    "end = '2018-07-01'"
+    "startyear = '2018-07-01'\n",
+    "end = '2019-07-01'"
    ]
   },
   {
@@ -215,7 +215,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -239,12 +240,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Events M>x, to help identify bigger ones**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eqsyr50[eqsyr50[' magnitude']>3]"
+    "yrm3 = eqsyr50[eqsyr50[' magnitude']>3]\n",
+    "yrm3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imagery\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
+    "ax = plt.axes(projection=imagery.crs)\n",
+    "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
+    "ax.add_image(imagery, 10)\n",
+    "\n",
+    "#active faults\n",
+    "plt.plot(faults['longitude'], faults['latitude'], color='black', transform=ccrs.Geodetic())\n",
+    "\n",
+    "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
+    "plt.scatter(yrm3['longitude'], yrm3[' latitude'], color='red', marker='o', s=eqsyr50[' magnitude']**2, transform=ccrs.Geodetic())"
    ]
   },
   {
@@ -283,7 +312,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -327,7 +357,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -403,7 +434,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([wlonmin, wlonmax, wlatmin, wlatmax])\n",
     "ax.add_image(imagery, 8)\n",
@@ -450,7 +482,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 8)\n",
@@ -492,7 +525,7 @@
     "\n",
     "mcount = eqs50m4.resample('1M', label='left', closed='left').count()\n",
     "ax1.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax1.bar(mcount.index, mcount.publicid, width = 10, color='blue', edgecolor='blue', align='edge', label='M>=4 earthquakes')\n",
+    "ax1.bar(mcount.index, mcount.publicid, width = 1, color='blue', edgecolor='blue', align='edge', label='M>=4 earthquakes')\n",
     "ax1.set_xlim([startall,end])\n",
     "ax1.legend(loc='upper left')\n",
     "#want integer ticks(grid), default for small y-range gives 0.5 spacing\n",
@@ -502,12 +535,12 @@
     "\n",
     "mcount = eqs50m3.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax2.bar(mcount.index, mcount.publicid, width = 10, color='green', edgecolor='green', align='edge', label='M>=3 earthquakes')\n",
+    "ax2.bar(mcount.index, mcount.publicid, width = 1, color='green', edgecolor='green', align='edge', label='M>=3 earthquakes')\n",
     "\n",
     "ax2.legend(loc='upper left')\n",
     "mcount = eqs50.resample('1M', label='left', closed='left').count()\n",
     "ax3.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax3.bar(mcount.index, mcount.publicid, width = 10, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
+    "ax3.bar(mcount.index, mcount.publicid, width = 1, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "plt.tight_layout()\n",
     "fig.savefig('taranaki_monthly.png', dpi=200)"
@@ -565,6 +598,8 @@
     "#mark change to Sc3 analysis\n",
     "ax.axvline(x='2012-01-01', color='black', linestyle='--', alpha=0.7)\n",
     "ax.text('2012-03-01', 300, 'Change to SC3 analysis', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=12)\n",
+    "ax.axvline(x='2018-12-15', color='black', linestyle='--', alpha=0.7)\n",
+    "ax.text('2019-01-15', 300, 'NGMC', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=12)\n",
     "ax.tick_params(axis='y', colors='red')\n",
     "ax.set_ylabel('cumulative number', color = 'red')\n",
     "ax.xaxis.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
@@ -904,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
