minor tweaks, uses stamen terrain (temporary)

--- a/mercury/rotokawa_annual_report.ipynb
+++ b/mercury/rotokawa_annual_report.ipynb
@@ -17,16 +17,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#import cartopy\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.io.img_tiles as cimgt\n",
     "from cartopy.io.img_tiles import OSM\n",
-    "#from cartopy.io.img_tiles import StamenTerrain\n",
+    "from cartopy.io.img_tiles import Stamen\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -71,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def haversine_np(lon1, lat1, lon2, lat2):\n",
@@ -106,9 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def utm_from_lon(lon):\n",
@@ -192,9 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "lonmin = 176.17\n",
@@ -213,22 +205,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "start = '2004-01-01T00:00:00'\n",
-    "thisrpt = '2016-07-01T00:00:00'\n",
-    "end = '2017-07-01T00:00:00'\n",
+    "mercstart = '2008-07-01'\n",
+    "thisrpt = '2018-07-01T00:00:00'\n",
+    "end = '2019-07-01T00:00:00'\n",
     "\n",
     "#previous report period\n",
-    "lastrpt = '2015-07-01T00:00:00'\n",
-    "lastend = '2016-07-01T00:00:00'\n",
+    "lastrpt = '2017-07-01T00:00:00'\n",
+    "lastend = '2018-07-01T00:00:00'\n",
     "\n",
     "#report period before that\n",
-    "last2rpt = '2014-07-01T00:00:00'\n",
-    "last2end = '2015-07-01T00:00:00'"
+    "last2rpt = '2016-07-01T00:00:00'\n",
+    "last2end = '2017-07-01T00:00:00'"
    ]
   },
   {
@@ -248,9 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "names=['nzmg_e', 'nzmg_n', 'latitude', 'longitude', 'z', 'ml', 'date', 'time']\n",
@@ -278,9 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#filter hypocentres to plot area\n",
@@ -299,9 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#depth and magnitude for 'old' data\n",
@@ -318,13 +303,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#this file needs to be kept up to date as new data are processed\n",
-    "hypdd = pd.read_csv('rotnga_hypodd_all.csv', usecols=[3,4,5,6,7,8], parse_dates={\"ot\" : ['YYYY-MM-DD','hh:mm:sec']}, index_col='ot')"
+    "hypdd = pd.read_csv('rotnga_hypodd_all.csv', usecols=[3,4,5,6,7,8], parse_dates={\"ot\" : ['YYYY-MM-DD','hh:mm:sec']}, index_col='ot')\n",
+    "# hypdd = pd.read_csv('20190630_mercury.csv', usecols=[3,4,5,6,7,8], parse_dates={\"ot\" : ['YYYY-MM-DD','hh:mm:sec']}, index_col='ot')"
    ]
   },
   {
@@ -342,15 +326,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hypdd.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hypdd.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(hypdd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#depth and magnitude for 'new' data\n",
@@ -368,9 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#concatenate 'old' and 'new' depth data\n",
@@ -398,6 +396,7 @@
     "dp.yaxis.grid()\n",
     "\n",
     "dp.set_ylim([0,8])\n",
+    "dp.set_xlim(mercstart, end)\n",
     "dp.set_ylabel('Depth (km)')\n",
     "\n",
     "plt.tight_layout()\n",
@@ -415,9 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#reference point (just south of Rotokawa power station)\n",
@@ -428,9 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hypdd['dist'] = haversine_np(hypdd['longitude'],hypdd['latitude'],lonref,latref)"
@@ -471,9 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#filter hypocentres to plot area, to just get rotokawa\n",
@@ -492,9 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#filter hypocentres for reporting period, to get rotokawa for just reporting period\n",
@@ -525,7 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hyprpt[hyprpt['ml']>=4]"
+    "hyprpt[hyprpt['ml']>=3]"
    ]
   },
   {
@@ -542,7 +533,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 15)\n",
@@ -579,14 +571,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#use existing GMT format file with '>' indicating a line break\n",
-    "names=['longitude', 'latitude']\n",
-    "faults = pd.read_csv('/home/sherburn/mapdata/nzafd_250k.psxy', sep='\\s+', na_values='>', names=names)"
+    "# names=['longitude', 'latitude']\n",
+    "# faults = pd.read_csv('/home/sherburn/mapdata/nzafd_250k.psxy', sep='\\s+', na_values='>', names=names)"
    ]
   },
   {
@@ -595,7 +585,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "faults.head()"
+    "# faults.head()"
    ]
   },
   {
@@ -608,9 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#wells for plotting\n",
@@ -628,24 +616,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#export data\n",
     "hyprpt.to_csv('section.csv', header=False)\n",
     "\n",
     "#run external program, temporary solution\n",
-    "!section.csh"
+    "!./section.csh"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read output of external program\n",
@@ -666,9 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#read well data (pre-projected)\n",
@@ -745,6 +727,7 @@
     "ax.yaxis.grid()\n",
     "\n",
     "ax.set_ylim([0,4.2])\n",
+    "ax.set_xlim(thisrpt, end)\n",
     "ax.set_ylabel('Magnitude')\n",
     "ax.tick_params(labelright = True)\n",
     "\n",
@@ -755,9 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hyprpt.to_csv('time-magnitude.csv', columns=['ml'])"
@@ -773,9 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#get hypodd and hyprot again, so am dealing with orginal data\n",
@@ -800,9 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#distance within 5 km\n",
@@ -821,9 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#eqs m>=0.8, magnitude of completeness in published study (2008-2012)\n",
@@ -862,6 +837,7 @@
     "ax1.xaxis.grid()\n",
     "ax1.yaxis.grid()\n",
     "ax1.set_ylim([0,4.2])\n",
+    "ax1.set_xlim(mercstart, end)\n",
     "ax1.set_ylabel('Magnitude')\n",
     "ax1.tick_params(labelright = True)\n",
     "\n",
@@ -877,7 +853,7 @@
     "ax2.set_ylim([0,nmax])\n",
     "\n",
     "#plot labels\n",
-    "ax2.text('2009-06-01', 4000, 'B', size=16)\n",
+    "ax2.text('2008-09-01', 4500, 'B', size=16)\n",
     "ax2.axvline(x='2010-02-01', color='blue', linestyle='--')\n",
     "ax2.text('2010-02-15', 4800, 'Nga Awa Purua start', rotation='vertical', color='blue')\n",
     "\n",
@@ -895,6 +871,7 @@
     "ax3.plot(hypall['cumeng'], color='blue', marker='None')\n",
     "ax3.tick_params(axis='y', colors='blue')\n",
     "ax3.set_ylabel('percent cumulative energy', color = 'blue')\n",
+    "ax3.set_ylim(0,100)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig('mercury_long-term_time-series.png', dpi=200)"
@@ -917,9 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#rotokawa\n",
@@ -950,9 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "slonmin = 176.15\n",
@@ -970,7 +943,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([slonmin, slonmax, slatmin, slatmax])\n",
     "ax.add_image(imagery, 15)\n",
@@ -1016,9 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "names = ['lon', 'lat', 'name']\n",
@@ -1044,9 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "wlonmin = 175.95\n",
@@ -1062,11 +1032,12 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([wlonmin, wlonmax, wlatmin, wlatmax])\n",
     "#ax.add_image(imagery, 15)\n",
-    "ax.add_image(imagery, 9)\n",
+    "ax.add_image(imagery, 10)\n",
     "#ax.gridlines()\n",
     "\n",
     "#extents of detailed plot area\n",
@@ -1102,24 +1073,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#box for search area\n",
     "bbox = '176.0,-38.8,176.5,-38.3'\n",
     "maxdep = '20'\n",
     "\n",
-    "url = 'http://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&maxdepth='+maxdep+'&startdate='+start+'&enddate='+end"
+    "url = 'https://quakesearch.geonet.org.nz/csv?bbox='+bbox+'&maxdepth='+maxdep+'&startdate='+start+'&enddate='+end"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs = pd.read_csv(url, parse_dates=['origintime'], index_col='origintime', usecols=[2,4,5,6,7])"
@@ -1137,9 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs['dist'] = haversine_np(eqs['longitude'],eqs[' latitude'],lonref,latref)"
@@ -1148,9 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs10 = eqs[eqs['dist']<10]"
@@ -1297,7 +1260,7 @@
     "eqs10.plot(y='dist', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax1)\n",
     "\n",
     "#plot label A\n",
-    "ax1.text('2004-03-01', 9, 'A', size=16)\n",
+    "ax1.text('2004-03-01', 9, 'A', size=16, fontweight=\"bold\")\n",
     "\n",
     "#yearly ticks and grid\n",
     "majorTick = mpl.dates.YearLocator(1)\n",
@@ -1323,7 +1286,7 @@
     "eqs10.plot(y=' magnitude', marker='o', markersize=5, linestyle='None', color='black', legend=False, ax=ax2)\n",
     "\n",
     "#plot label 8\n",
-    "ax2.text('2004-03-01', 3.7, 'B', size=16)\n",
+    "ax2.text('2004-03-01', 3.7, 'B', size=16, fontweight=\"bold\")\n",
     "\n",
     "#yearly ticks and grid\n",
     "ax2.xaxis.set_major_locator(majorTick)\n",
@@ -1332,6 +1295,7 @@
     "ax2.yaxis.grid()\n",
     "\n",
     "ax2.set_ylim([0,4.2])\n",
+    "ax2.set_xlim(start, end)\n",
     "ax2.set_ylabel('Magnitude')\n",
     "ax2.tick_params(labelright = True)\n",
     "\n",
@@ -1360,21 +1324,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
